tests/errors/E043.zen
// TODO: This test currently cannot be created since structure cannot be initialized yet.